--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html lang xml:lang>
      <head>
          <meta charset="UTF-8">
+	 <link rel="stylesheet" href="superpower.css" type="text/css">
          <title>superpower</title>
      </head>
      <body>
