--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
  <html lang xml:lang>
      <head>
          <meta charset="UTF-8">
-	 <link rel="stylesheet" href="superpower.css" type="text/css">
+	 <link rel="stylesheet" href="index.css" type="text/css">
          <title>superpower</title>
      </head>
      <body>
-		<h1>My Superpower </h1>
-         <h2>Introduction</h2>
-         <p>Every human being must have fantasized having superpowers at least once in his life. At first, I thought I would want a superpower that will make me run fast, like the Flash, but then I thought of all these great men who made it big without having to run fast.</p>
-         <h2>Use of my superpower </h2>
-         <p>So I thought of a better idea. If I could have one superpower that would help the world, I want to be able to resolve every problem in the world. The main problem of the whole world today is war. War is taking place everywhere and that too in the name of religion. I would clear people’s perceptions and make them understand that every religion is equal and hence we should respect all religions. By stopping these wars, I could end all sufferings and deaths that come with it and save even more people.</p>
-        
-         <h2> The Aftermath</h2>
-         <p>Wouldn’t it be nice if there was peace everywhere? So, with my superpower I would travel the world, going to places that are constantly at war and bring about peace among them. This power is needed all over the world and I would be the messenger of it.</p> 
-		<img src="H:/ICS/Web_development/superpower-of-knowledge.jpg" width="225" height="225" alt="Book representing Knowledge">
+		<h1>Home Page </h1>
+        <h2>Welcome To my main page</h2>
+		<img src="H:/ICS/Web_development/monkey.jpg" width="236" height="236" alt="Cartoon monkey">
 		<p>
-			<a href="http://www.gxdmtl.com/325859-magic.html">Where I got my image</a>
+			<a href="https://www.pinterest.com/pin/211528513721680151/">Where I got my image</a>
+		</p>
+		<h2>My other pages</h2>
+		<p>
+		<a href="H:/ICS/Web_development/23.html">Superpower </a>
+		</P>
+		<p>
+			<a href="H:/ICS/Web_development/man.html">Science</a>
 		</p>
  </body>
  </html>
